deploy/apps/capacitor/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: capacitor-ingress
  namespace: components
spec:
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector: {}
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: capacitor
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-fluxui
  namespace: components
spec:
  stripPrefix:
    prefixes:
      - "/fluxui"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: capacitor-ingress
  namespace: components
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: components-strip-fluxui@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - secretName: homeserver-tls-cert
      hosts:
        - homeserver.local
  rules:
    - host: homeserver.local
      http:
        paths:
          - pathType: Prefix
            path: /fluxui
            backend:
              service:
                name: capacitor
                port:
                  number: 9000
